--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
     <div id="scriptingDiv" style="display: none;">
         <div id="disclaimerBackgroundBlocker"></div>
         <div id="disclaimer">
-            <div id="disclaimer_title"><i id="disclaimer_title_warning" class="fa-regular fa-triangle-exclamation" style="color: rgb(255, 73, 73);"></i> Disclaimer</div>
-            <div id="disclaimer_text">Dieser Bußgeldrechner ist discontinued.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[WERBUNG]</b> Ihr Sucht nach einer Alternative zu Grand?: <a href="https://discord.gg/dysenic" target="_blank" style="color: rgb(49, 121, 255);">discord.gg/dysenic</a></font></div>
-            <button id="disclaimer_button" onclick="JavaScript:disclaimerAccepted()">Warnung verstanden</button>
+            <div id="disclaimer_title"><i id="disclaimer_title_warning" class="fa-regular fa-triangle-exclamation" style="color: rgb(255, 73, 73);"></i> Info</div>
+            <div id="disclaimer_text">Dieser Bußgeldrechner wird nun weiter gefürt von Torbenn Tot.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Unterstüzung]</b> Ihr wollt mich unterstüzen?: <a href="" target="_blank" style="color: rgb(49, 121, 255);">PayPal:virusgotdrip@yahoo.com</a></font></div>
+            <button id="disclaimer_button" onclick="JavaScript:disclaimerAccepted()">Verstanden</button>
         </div>
 
     <div id="header">
         <div id="title">Bußgeldrechner</div>
-        <div id="credits">Made by Joshi Enrage | 147106</div>
+        <div id="credits">Made by Joshi Enrage Rolled up by Torbenn Tot</div>
         <div id="searchbar"><input id="searchbar_input" oninput="JavaScript:searchFine()" type="text" placeholder="Nach einer Straftat suchen"></div>
     </div>
 
@@ -626,7 +626,7 @@
                 </tr>
                 <tr class="categoryHeader">
                     <th></th>
-                    <th>Beamtendienstgesetzbuch (BDG)</th>
+                    <th>Beamtendienstgesetzbuch (Nicht für den Streifendienst) (BDG)</th>
                 </tr>
                 <tr class="showing fine" onclick="JavaScript:selectFine(event)" data-removedriverlicence="false" data-removeweaponlicence="false">
                     <td class="paragraph">BDG §2</td>
