--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="DOJ_logo.png?" sizes="32x32" type="image/png">
     <meta content="Bußgeldrechner DE 01" property="og:title" />
-    <meta content="Bußgeldrechner für GrandRP DE 01 - Made by Joshi Enrage" property="og:description" />
+    <meta content="Bußgeldrechner für GrandRP DE 01 - Updated by Torbenn Tot" property="og:description" />
     <meta content="https://dev-gosling.github.io/bussgeldrechner" property="og:url" />
     <meta content="https://dev-gosling.github.io/bussgeldrechner/DOJ_logo.png" property="og:image" />
     <meta content="#5c69ff" data-react-helmet="true" name="theme-color" />
@@ -43,13 +43,13 @@
         <div id="disclaimerBackgroundBlocker"></div>
         <div id="disclaimer">
             <div id="disclaimer_title"><i id="disclaimer_title_warning" class="fa-regular fa-triangle-exclamation" style="color: rgb(255, 73, 73);"></i> Info</div>
-            <div id="disclaimer_text">Dieser Bußgeldrechner wird nun weiter gefürt von Torbenn Tot.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Unterstüzung]</b> Ihr wollt mich unterstüzen?: <a href="" target="_blank" style="color: rgb(49, 121, 255);">PayPal:virusgotdrip@yahoo.com</a></font></div>
+            <div id="disclaimer_text">Dieser Bußgeldrechner wird nun weitergeführt von Torbenn Tot.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Unterstüzung]</b> Ihr wollt mich unterstüzen? <a href="" target="_blank" style="color: rgb(255, 255, 255);">PayPal:virusgotdrip@yahoo.com</a></font></div>
             <button id="disclaimer_button" onclick="JavaScript:disclaimerAccepted()">Verstanden</button>
         </div>
 
     <div id="header">
         <div id="title">Bußgeldrechner</div>
-        <div id="credits">Made by Joshi Enrage Rolled up by Torbenn Tot</div>
+        <div id="credits">Updated by Torbenn Tot | OG Version made by Joshi Enrage</div>
         <div id="searchbar"><input id="searchbar_input" oninput="JavaScript:searchFine()" type="text" placeholder="Nach einer Straftat suchen"></div>
     </div>
 
