--- a/index.html
+++ b/index.html
@@ -756,10 +756,7 @@
                 <input id="übergabeInput_input" type="text" oninput="JavaScript:startCalculating()" placeholder="TV-Abtransport Beauftrager" maxlength="64">
             </div>
 
-            <div id="notepadArea"><text id="notepadArea_input" name="" placeholder="Sie haben das Recht zu schweigen, alles was Sie sagen, kann gegen Sie verwendet werden. Ab 3 Wanteds haben Sie das Recht auf einen Anwalt, den Sie selbst benennen müssen. Wenn kein Anwalt verfügbar ist, wird Ihnen keiner gestellt. Die Judikative übernimmt der Exekutivbeamte. Haben Sie ihre Rechte verstanden?
-
-Wenn ein Anwalt gewünscht:
-Wenn ein Anwalt hinzugezogen wird, kann es länger als 25 Minuten dauern. Haben Sie dies verstanden?" id="" rows="3"></text></div>
+            <div id="notepadArea"><textpad id="notepadArea_input" name="Notizen" placeholder=" " id="" rows="3"></textpad></div>
 
             <div id="reue">
                 <input id="reue_box" onchange="JavaScript:startCalculating()" type="checkbox" name="">
