--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                 <input id="übergabeInput_input" type="text" oninput="JavaScript:startCalculating()" placeholder="TV-Abtransport Beauftrager" maxlength="64">
             </div>
 
-            <div id="notepadArea"><textpad id="notepadArea_input" name="Notizen" placeholder=" " id="" rows="3"></textpad></div>
+              <div id="notepadArea"><textarea id="notepadArea_input" name="" placeholder="Schreibe deine Notizen hier rein..." id="" rows="3"></textarea></div> 
 
             <div id="reue">
                 <input id="reue_box" onchange="JavaScript:startCalculating()" type="checkbox" name="">
