--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="DOJ_logo.png?" sizes="32x32" type="image/png">
     <meta content="Bußgeldrechner DE 01" property="og:title" />
-    <meta content="Bußgeldrechner für GrandRP DE 01 - Made by Joshi Enrage" property="og:description" />
+    <meta content="Bußgeldrechner für GrandRP DE 01 - Upated by Torbenn Tot |  OG Version by Joshi Enrage" property="og:description" />
     <meta content="https://dev-gosling.github.io/bussgeldrechner" property="og:url" />
     <meta content="https://dev-gosling.github.io/bussgeldrechner/DOJ_logo.png" property="og:image" />
     <meta content="#5c69ff" data-react-helmet="true" name="theme-color" />
@@ -43,13 +43,13 @@
         <div id="disclaimerBackgroundBlocker"></div>
         <div id="disclaimer">
             <div id="disclaimer_title"><i id="disclaimer_title_warning" class="fa-regular fa-triangle-exclamation" style="color: rgb(255, 73, 73);"></i> Disclaimer</div>
-            <div id="disclaimer_text">Dieser Bußgeldrechner ist discontinued.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[WERBUNG]</b> Ihr Sucht nach einer Alternative zu Grand?: <a href="https://discord.gg/dysenic" target="_blank" style="color: rgb(49, 121, 255);">discord.gg/dysenic</a></font></div>
-            <button id="disclaimer_button" onclick="JavaScript:disclaimerAccepted()">Warnung verstanden</button>
+            <div id="disclaimer_text">Dieser Bußgeldrechner wird von Torbenn Tot weitergeführt.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Unterstüzer]</b> Unterstüze mich doch gerne :): <a href="https://discord.gg/dysenic" target="_blank" style="color: rgb(49, 121, 255);">PayPal:virusgotdrip@yahoo.com</a></font></div>
+            <button id="disclaimer_button" onclick="JavaScript:disclaimerAccepted()">Verstanden</button>
         </div>
 
     <div id="header">
         <div id="title">Bußgeldrechner</div>
-        <div id="credits">Made by Joshi Enrage | 147106</div>
+        <div id="credits">Updated by Torbenn Tot | OG Version by Joshi Enrage</div>
         <div id="searchbar"><input id="searchbar_input" oninput="JavaScript:searchFine()" type="text" placeholder="Nach einer Straftat suchen"></div>
     </div>
 
@@ -626,7 +626,7 @@
                 </tr>
                 <tr class="categoryHeader">
                     <th></th>
-                    <th>Beamtendienstgesetzbuch (BDG)</th>
+                    <th>Beamtendienstgesetzbuch (Nicht für den Streifendinst) (BDG)</th>
                 </tr>
                 <tr class="showing fine" onclick="JavaScript:selectFine(event)" data-removedriverlicence="false" data-removeweaponlicence="false">
                     <td class="paragraph">BDG §2</td>
@@ -739,6 +739,7 @@
                     <option value="ng">National Guard</option>
                     <option value="usss">United States Secret Service</option>
                     <option value="fib">Federal Investigation Bureau</option>
+                    <option value="fibco">FIBCO</option>
                 </select>
                 <input id="übergabeInput_input" type="text" oninput="JavaScript:startCalculating()" placeholder="TV-Abtransport Beauftrager" maxlength="64">
             </div>
