--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="disclaimerBackgroundBlocker"></div>
         <div id="disclaimer">
             <div id="disclaimer_title"><i id="disclaimer_title_warning" class="fa-regular fa-triangle-exclamation" style="color: rgb(255, 73, 73);"></i> Disclaimer</div>
-            <div id="disclaimer_text">Dieser Bußgeldrechner wird von Torbenn Tot weitergeführt.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Unterstüzer]</b> Unterstüze mich doch gerne :): <a href="https://discord.gg/dysenic" target="_blank" style="color: rgb(49, 121, 255);">PayPal:virusgotdrip@yahoo.com</a></font></div>
+            <div id="disclaimer_text">Dieser Bußgeldrechner wird von Torbenn Tot weitergeführt.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Unterstüzer]</b> Unterstüze mich doch gerne :) <a href="https://discord.gg/dysenic" target="_blank" style="color: rgb(255, 255, 255);">PayPal:virusgotdrip@yahoo.com</a></font></div>
             <button id="disclaimer_button" onclick="JavaScript:disclaimerAccepted()">Verstanden</button>
         </div>
 
@@ -626,7 +626,7 @@
                 </tr>
                 <tr class="categoryHeader">
                     <th></th>
-                    <th>Beamtendienstgesetzbuch (Nicht für den Streifendinst) (BDG)</th>
+                    <th>Beamtendienstgesetzbuch (Nicht für den Streifendienst) (BDG)</th>
                 </tr>
                 <tr class="showing fine" onclick="JavaScript:selectFine(event)" data-removedriverlicence="false" data-removeweaponlicence="false">
                     <td class="paragraph">BDG §2</td>
@@ -740,6 +740,7 @@
                     <option value="usss">United States Secret Service</option>
                     <option value="fib">Federal Investigation Bureau</option>
                     <option value="fibco">FIBCO</option>
+                    <option value="Justiz">Justiz</option>
                 </select>
                 <input id="übergabeInput_input" type="text" oninput="JavaScript:startCalculating()" placeholder="TV-Abtransport Beauftrager" maxlength="64">
             </div>
