--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
                 <label style="line-height: 25px;" for="systemfehler_box">Systemfehler</label>
             </div>
 
-            <button id="showButton" onclick="JavaScript:showFines()">Bußgelder anzeigen</button>
+            <button id="showButton" onclick="JavaScript:showFines()">Rechte anzeigen</button>
 
             <button id="showAttorneysButton" onclick="JavaScript:showAttorneys()">Anwaltsregister anzeigen</button>
 
@@ -765,11 +765,10 @@
         </div>
 
         <div id="finesListContainer" style="pointer-events: none;">
-            <div id="finesListContainer_title">Auflistung der zu vergebenen Geldstrafen</div>
+            <div id="finesListContainer_title">Rechte des TVs</div>
             <table id="finesListTable">
                 <tr>
-                    <th style="width: 80%;">Grund für die Geldstrafe</th>
-                    <th style="width: 20%;">Bußgeld</th>
+                    <th style="width: 80%;">"Sie haben das Recht zu schweigen, alles was Sie sagen, kann gegen Sie verwendet werden. Ab 3 Wanteds haben Sie das Recht auf einen Anwalt, den Sie selbst benennen müssen. Wenn kein Anwalt verfügbar ist, wird Ihnen keiner gestellt. Die Judikative übernimmt der Exekutivbeamte. Haben Sie ihre Rechte verstanden?Wenn ein Anwalt gewünscht:Wenn ein Anwalt hinzugezogen wird, kann es länger als 25 Minuten dauern. Haben Sie dies verstanden?"</th>
                 </tr>
 
             </table>
