--- a/index.html
+++ b/index.html
@@ -768,8 +768,8 @@
             <div id="finesListContainer_title">Rechte des TVs</div>
                 <tr>
                     <th style="width: 80%;">"Sie haben das Recht zu schweigen, alles was Sie sagen, kann gegen Sie verwendet werden. Ab 3 Wanteds haben Sie das Recht auf einen Anwalt,
-                        den Sie selbst benennen müssen. Wenn kein Anwalt verfügbar ist, wird Ihnen keiner gestellt.
-                        Die Judikative übernimmt der Exekutivbeamte. Haben Sie ihre Rechte verstanden?
+                        den Sie selbst benennen müssen. Wenn kein Anwalt verfügbar ist, wird Ihnen keiner gestellt.</th>
+                      <th style="width: 80%;">   Die Judikative übernimmt der Exekutivbeamte. Haben Sie ihre Rechte verstanden?
                         Wenn ein Anwalt gewünscht:Wenn ein Anwalt hinzugezogen wird, kann es länger als 25 Minuten dauern. Haben Sie dies verstanden?"</th>
                 </tr>
 
