--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="shortcut icon" href="DOJ_logo.png?" sizes="32x32" type="image/png">
     <meta content="Bußgeldrechner DE 01" property="og:title" />
     <meta content="Bußgeldrechner für GrandRP DE 01 - Upated by Torbenn Tot |  OG Version by Joshi Enrage" property="og:description" />
-    <meta content="https://dev-gosling.github.io/bussgeldrechner" property="og:url" />
-    <meta content="https://dev-gosling.github.io/bussgeldrechner/DOJ_logo.png" property="og:image" />
+    <meta content="https://torbenqq.github.io/Bussgeldrechner/" property="og:url" />
+    <meta content="https://torbenqq.github.io/Bussgeldrechner//DOJ_logo.png" property="og:image" />
     <meta content="#5c69ff" data-react-helmet="true" name="theme-color" />
 
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v6.2.1/css/pro.min.css">
