--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style_sahp_overwrite.css">
     <link rel="shortcut icon" href="SAHP_logo.png?" sizes="32x32" type="image/png">
     <meta content="Bußgeldrechner DE 01" property="og:title" />
-    <meta content="Bußgeldrechner für GrandRP DE 01 - Made by Joshi Enrage for SAHP" property="og:description" />
+    <meta content="Bußgeldrechner für GrandRP DE 01 - Made by Torbenn Tot for SAHP" property="og:description" />
     <meta content="https://dev-gosling.github.io/sahp-bgr" property="og:url" />
     <meta content="https://dev-gosling.github.io/sahp-bgr/SAHP_logo.png" property="og:image" />
     <meta content="#65d3ff" data-react-helmet="true" name="theme-color" />
@@ -34,13 +34,13 @@
         <div id="disclaimerBackgroundBlocker"></div>
     <div id="disclaimer">
         <div id="disclaimer_title"><i id="disclaimer_title_warning" class="fa-regular fa-triangle-exclamation" style="color: rgb(255, 73, 73);"></i> Disclaimer</div>
-        <div id="disclaimer_text">Dieser Bußgeldrechner ist discontinued.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[WERBUNG]</b> Ihr Sucht nach einer Alternative zu Grand?: <a href="https://discord.gg/dysenic" target="_blank" style="color: rgb(49, 121, 255);">discord.gg/dysenic</a></font></div>
-        <button id="disclaimer_button" onclick="JavaScript:disclaimerAccepted()">Warnung verstanden</button>
+        <div id="disclaimer_text">Dieser Bußgeldrechner wird von Torbenn Tot weiter geführt.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Discord]</b> Joint gerne den Discord Chanel  vom Bussgeldrechner?: <a href="https://discord.gg/unv3vmGVNy" target="_blank" style="color: rgb(49, 121, 255);">discord.gg/dysenic</a></font></div>
+        <button id="disclaimer_button" onclick="JavaScript:disclaimerAccepted()">Verstanden</button>
     </div>
 
     <div id="header">
         <div id="title"><div id="header_icon"><img src="SAHP_logo.png" alt="SAHP LOGO" draggable="false"></div><div id="header_titleText">Bußgeldrechner - SAHP</div></div>
-        <div id="credits">Made by Joshi Enrage | 147106 for SAHP</div>
+        <div id="credits">Made by Torbenn Tot for SAHP</div>
         <div id="searchbar"><input id="searchbar_input" oninput="JavaScript:searchFine()" type="text" placeholder="Nach einer Straftat suchen"></div>
     </div>
 
@@ -617,7 +617,7 @@
                 </tr>
                 <tr class="categoryHeader">
                     <th></th>
-                    <th>Beamtendienstgesetzbuch (BDG)</th>
+                    <th>Beamtendienstgesetzbuch (Nicht für den Streifendienst) (BDG)</th>
                 </tr>
                 <tr class="showing fine" onclick="JavaScript:selectFine(event)" data-removedriverlicence="false" data-removeweaponlicence="false">
                     <td class="paragraph">BDG §2</td>
