--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bußgeldrechner DE01 - SAHP</title>
+    <title>Bußgeldrechner</title>
     <script src="index.js"></script>
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_sahp_overwrite.css">
-    <link rel="shortcut icon" href="SAHP_logo.png?" sizes="32x32" type="image/png">
     <meta content="Bußgeldrechner DE 01" property="og:title" />
     <meta content="Bußgeldrechner für GrandRP DE 01 - Made by Torbenn Tot for SAHP" property="og:description" />
     <meta content="https://dev-gosling.github.io/sahp-bgr" property="og:url" />
