--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="disclaimerBackgroundBlocker"></div>
     <div id="disclaimer">
         <div id="disclaimer_title"><i id="disclaimer_title_warning" class="fa-regular fa-triangle-exclamation" style="color: rgb(255, 73, 73);"></i> Disclaimer</div>
-        <div id="disclaimer_text">Dieser Bußgeldrechner wird von Torbenn Tot weiter geführt.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Discord]</b> Joint gerne den Discord Chanel  vom Bussgeldrechner?: <a href="https://discord.gg/unv3vmGVNy" target="_blank" style="color: rgb(49, 121, 255);">discord.gg/dysenic</a></font></div>
+        <div id="disclaimer_text">Dieser Bußgeldrechner wird von Torbenn Tot weiter geführt.<br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Discord]</b> Joint gerne den Discord Chanel  vom Bussgeldrechner?: <a href="https://discord.gg/unv3vmGVNy" target="_blank" style="color: rgb(49, 121, 255);">discord.gg/bussgeldrechner</a></font></div>
         <button id="disclaimer_button" onclick="JavaScript:disclaimerAccepted()">Verstanden</button>
     </div>
 
