--- a/index.html
+++ b/index.html
@@ -212,13 +212,12 @@
                     <td class="wantedAmount" data-wantedamount="0"><font class="extrawanted1 extrawanted" onclick="JavaScript:toggleExtraWanted(event)" data-addedfine="0">☆</font></td>
                     <td class="fineAmount" data-fineamount="10000">$10.000</td>
                 </tr>
-                <tr class="showing fine" onclick="JavaScript:selectFine(event)" data-removedriverlicence="true" data-removeweaponlicence="false">
+        <tr class="showing fine" onclick="JavaScript:selectFine(event)" data-removedriverlicence="true" data-removeweaponlicence="false">
                     <td class="paragraph">StVO §24</td>
-                    <td class="fineText">Fahrerflucht / Entziehung einer Verkehrskontrolle mit integriertem Anti Radar / Flucht mit integriertem Anti Radar </td>
-                    <td class="wantedAmount" data-wantedamount="3"><font class="extrawanted1 extrawanted" onclick="JavaScript:toggleExtraWanted(event)" data-addedfine="0">☆</font></td>
+                    <td class="fineText">Fahrerflucht / Entziehung einer Verkehrskontrolle mit integriertem Anti Radar / Flucht mit integriertem Anti Radar</td>
+                    <td class="wantedAmount" data-wantedamount="3">⭐⭐⭐</td>
                     <td class="fineAmount" data-fineamount="20000">$20.000</td>
                 </tr>
-                
                 <tr class="showing fine" onclick="JavaScript:selectFine(event)" data-removedriverlicence="true" data-removeweaponlicence="false">
                     <td class="paragraph">StVO §28</td>
                     <td class="fineText">Sharing-Cars mit Anti-Radar wurde nicht aus dem Verkehr gezogen</td>
