--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <tr class="showing fine" onclick="JavaScript:selectFine(event)" data-removedriverlicence="true" data-removeweaponlicence="false">
                     <td class="paragraph">StVO §24</td>
                     <td class="fineText">Fahrerflucht / Entziehung einer Verkehrskontrolle</td>
-                    <td class="wantedAmount" data-wantedamount="0"><font class="extrawanted1 extrawanted" onclick="JavaScript:toggleExtraWanted(event)">☆</font><font class="extrawanted2 extrawanted" onclick="JavaScript:toggleExtraWanted(event)">☆</font></td>
+                    <td class="wantedAmount" data-wantedamount="0"><font class="extrawanted1 extrawanted" onclick="JavaScript:toggleExtraWanted(event)">☆</font>
                     <td class="fineAmount" data-fineamount="10000">$10.000</td>
                 </tr>
                 <tr class="showing fine" onclick="JavaScript:selectFine(event)" data-removedriverlicence="false" data-removeweaponlicence="false">
