--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="style_sahp_overwrite.css">
     <meta content="Bußgeldrechner DE 01" property="og:title" />
     <meta content="Bußgeldrechner für GrandRP DE 01 - Made by Torbenn Tot for SAHP" property="og:description" />
-    <meta content="https://dev-gosling.github.io/sahp-bgr" property="og:url" />
-    <meta content="https://dev-gosling.github.io/sahp-bgr/SAHP_logo.png" property="og:image" />
+    <meta content="https://torbenqq.github.io/Bussgeldrechner/DOJ_logo.png" property="og:url" />
+    <meta content="https://torbenqq.github.io/Bussgeldrechner/DOJ_logo.png="og:image" />
     <meta content="#65d3ff" data-react-helmet="true" name="theme-color" />
 
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v6.2.1/css/pro.min.css">
