--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <div id="header">
-        <div id="title"><div id="header_icon"><img src="SAHP_logo.png" alt="SAHP LOGO" draggable="false"></div><div id="header_titleText">Bußgeldrechner - SAHP</div></div>
+        <div id="title"><div id="header_icon"><img src="DOJ_logo.png" alt="SAHP LOGO" draggable="false"></div><div id="header_titleText">Bußgeldrechner - SAHP</div></div>
         <div id="credits">Made by Torbenn Tot for SAHP</div>
         <div id="searchbar"><input id="searchbar_input" oninput="JavaScript:searchFine()" type="text" placeholder="Nach einer Straftat suchen"></div>
     </div>
