--- a/index.html
+++ b/index.html
@@ -751,9 +751,8 @@
             </div>
 
             <button id="showButton" onclick="JavaScript:showFines()">Bußgelder anzeigen</button>
-
             <button id="showAttorneysButton" onclick="JavaScript:showAttorneys()">Anwaltsregister anzeigen</button>
-
+            <button id="rightsButton" onclick="JavaScript:rightsButton()">Rechte Des TVs</button>
             <button id="resetButton" onclick="JavaScript:resetButton()">Zurücksetzen</button>
         </div>
 
@@ -771,7 +770,8 @@
         <div id="attorneyContainer" style="pointer-events: none;">
             <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR9jL6XijVLrXvOs1bqjsE0cWfvER0e0VU4F8wh3wgVEIdY0wyIUAfxJaZZpwMPERPFGZHQ-_sdtjWi/pubhtml?gid=690010630&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
         </div>
-
+        <div id="rightsContainer" style="pointer-events: none;">
+                <iframe src="Rechte_des_TVs.png"></iframe>
         <div id="standartNotifications">
         </div>
     </div>
