--- a/index.html
+++ b/index.html
@@ -772,6 +772,7 @@
         </div>
         <div id="rightsContainer" style="pointer-events: none;">
                 <iframe src="Rechte_des_TVs.png"></iframe>
+        </div>
         <div id="standartNotifications">
         </div>
     </div>
