--- a/index.html
+++ b/index.html
@@ -734,11 +734,12 @@
                     <option value="ng">National Guard</option>
                     <option value="usss">United States Secret Service</option>
                     <option value="fib">Federal Investigation Bureau</option>
+                    <option value="gov">Goverment</option>
                 </select>
                     <input id="übergabeInput_input" type="text" oninput="JavaScript:startCalculating()" placeholder="TV-Abtransport Beauftrager" maxlength="64">
                 </div>
                 <div id="notepadArea">
-                    <textarea id="notepadArea_input" name="" placeholder="Schreibe deine Notizen hier rein..." id="" rows="3"></textarea>
+                    <textarea id="notepadArea_input" name="" placeholder="Hier ist Platz für Notizen..." id="" rows="3"></textarea>
                 </div>
                 <div id="reue">
                     <input id="reue_box" onchange="JavaScript:startCalculating()" type="checkbox" name="">
