--- a/index.html
+++ b/index.html
@@ -33,17 +33,11 @@
         <div id="disclaimerBackgroundBlocker"></div>
     <div id="disclaimer">
         <div id="disclaimer_title"><i id="disclaimer_title_warning" class="fa-regular fa-triangle-exclamation" style="color: rgb(255, 73, 73);"></i> Disclaimer</div>
-        <div id="disclaimer_text">Dieser Bußgeldrechner wird von Torbenn Tot weiter geführt. Wir übernehmen keine Haftung für falsch ausgestellte Strafen! <br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Discord]</b> Joint gerne den Discord Server vom Bussgeldrechner: <a href="https://discord.gg/unv3vmGVNy" target="_blank" style="color: rgb(49, 121, 255);">discord.gg/bussgeldrechner</a></font></div>
-        <button id="disclaimer_button" onclick="JavaScript:disclaimerAccepted()">Verstanden</button>
-    </div>
-
-        <div id="scriptingDiv" style="display: none;">
-        <div id="disclaimerBackgroundBlocker"></div>
-    <div id="disclaimer">
-        <div id="disclaimer_title"><i id="disclaimer_title_warning" class="fa-regular fa-triangle-exclamation" style="color: rgb(255, 73, 73);"></i> Update</div>
-        <div id="disclaimer_text">Der Bußgeldrechner hat ein Update bekommen! <br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Discord]</b> Um nix mehr zu Verpassen joint: <a href="https://discord.gg/unv3vmGVNy" target="_blank" style="color: rgb(49, 121, 255);">discord.gg/bussgeldrechner</a></font></div>
+        <div id="disclaimer_text">>Der Bußgeldrechner hat ein Update bekommen!. Wir übernehmen keine Haftung für falsch ausgestellte Strafen! <br><br><font style="color: white; font-size: 25px;"><b style="color: white; font-size: 25px;">[Discord]</b> Joint gerne den Discord Server vom Bussgeldrechner: <a href="https://discord.gg/unv3vmGVNy" target="_blank" style="color: rgb(49, 121, 255);">discord.gg/bussgeldrechner</a></font></div>
         <button id="disclaimer_button" onclick="JavaScript:disclaimerAccepted()">Cool</button>
     </div>
+
+        
 
 
     <div id="header">
