--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
     <div id="header">
-        <div id="credits">Made by Torbenn Tot for SAHP</div>
+        <div id="credits"><a href="https://discord.gg/unv3vmGVNy" target="_blank" style="color: rgb(49, 121, 255);">Bußgeldrechner</a></font></div>
         <div id="searchbar"><input id="searchbar_input" oninput="JavaScript:searchFine()" type="text" placeholder="Nach einer Straftat suchen"></div>
     </div>
 
